[project]
name = "pulumi-stack-utils"
description = "Utilities for working with Pulumi stacks"
version = "0.1.0"
authors = [
    { name="James Arnold", email="james@rs21.io" }
]
dependencies = [
    "boto3",
    "pulumi",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-pylint",
]

[tool.pylint.'FORMAT']
max-line-length = 88

[tool.pylint.'MASTER']
ignore = "test"